chore: z-garbage collector & max 2G heap