@@ -5,4 +5,4 @@ RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 
 COPY /target/concept-catalog.jar app.jar
 
-CMD java -jar $JAVA_OPTS app.jar
+CMD java -jar -XX:+UseZGC -Xmx2g $JAVA_OPTS app.jar
